--- a/Jupyter Exercice/Plotly(Présentielle 2017 Résultats Tour 1).ipynb
+++ b/Jupyter Exercice/Plotly(Présentielle 2017 Résultats Tour 1).ipynb
@@ -44,21 +44,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ea078959",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1:     Code de la région        Libellé de la région  Inscrits  Abstentions  \\\n",
+       " 0                  44                   Grand Est   3873402       825831   \n",
+       " 1                  75          Nouvelle-Aquitaine   4329942       846148   \n",
+       " 2                  84     Auvergne et Rhône-Alpes   5416712      1119551   \n",
+       " 3                  27     Bourgogne-Franche-Comté   2001656       412997   \n",
+       " 4                  53                    Bretagne   2453683       405071   \n",
+       " 5                  24         Centre-Val de Loire   1827657       360765   \n",
+       " 6                  11               Île-de-France   7199231      1447722   \n",
+       " 7                  76                   Occitanie   4194294       794467   \n",
+       " 8                  32             Hauts-de-France   4241887       925193   \n",
+       " 9                  28                   Normandie   2398182       458364   \n",
+       " 10                 52            Pays de la Loire   2705170       452471   \n",
+       " 11                 93  Provence-Alpes-Côte d'Azur   3567740       756902   \n",
+       " 12                 94                       Corse    233656        74665   \n",
+       " 13                  1                  Guadeloupe    316345       189694   \n",
+       " 14                  2                  Martinique    310812       186855   \n",
+       " 15                  3                      Guyane     92935        61010   \n",
+       " 16                  4                  La Réunion    639481       264229   \n",
+       " 17                  6                     Mayotte     83047        46860   \n",
+       " \n",
+       "     % Abs/Ins  Votants  % Vot/Ins  Blancs  % Blancs/Ins  % Blancs/Vot  ...  \\\n",
+       " 0       21.32  3047571      78.68   55656          1.44          1.83  ...   \n",
+       " 1       19.54  3483794      80.46   63983          1.48          1.84  ...   \n",
+       " 2       20.67  4297161      79.33   78647          1.45          1.83  ...   \n",
+       " 3       20.63  1588659      79.37   31180          1.56          1.96  ...   \n",
+       " 4       16.51  2048612      83.49   34417          1.40          1.68  ...   \n",
+       " 5       19.74  1466892      80.26   27910          1.53          1.90  ...   \n",
+       " 6       20.11  5751509      79.89   87595          1.22          1.52  ...   \n",
+       " 7       18.94  3399827      81.06   56860          1.36          1.67  ...   \n",
+       " 8       21.81  3316694      78.19   58622          1.38          1.77  ...   \n",
+       " 9       19.11  1939818      80.89   35209          1.47          1.82  ...   \n",
+       " 10      16.73  2252699      83.27   44175          1.63          1.96  ...   \n",
+       " 11      21.22  2810838      78.78   44480          1.25          1.58  ...   \n",
+       " 12      31.96   158991      68.04    2874          1.23          1.81  ...   \n",
+       " 13      59.96   126651      40.04    5630          1.78          4.45  ...   \n",
+       " 14      60.12   123957      39.88    8152          2.62          6.58  ...   \n",
+       " 15      65.65    31925      34.35    3831          4.12         12.00  ...   \n",
+       " 16      41.32   375252      58.68   11468          1.79          3.06  ...   \n",
+       " 17      56.43    36187      43.57     925          1.11          2.56  ...   \n",
+       " \n",
+       "     Prénom.9  Voix.9  % Voix/Ins.9  % Voix/Exp.9  Sexe.10     Nom.10  \\\n",
+       " 0   Nathalie   24272          0.63          0.82        M  CHEMINADE   \n",
+       " 1   Nathalie   21439          0.50          0.63        M  CHEMINADE   \n",
+       " 2   Nathalie   24656          0.46          0.59        M  CHEMINADE   \n",
+       " 3   Nathalie   11496          0.57          0.74        M  CHEMINADE   \n",
+       " 4   François   13419          0.55          0.67        M  CHEMINADE   \n",
+       " 5   Nathalie   11365          0.62          0.80        M  CHEMINADE   \n",
+       " 6   Nathalie   23582          0.33          0.42        M  CHEMINADE   \n",
+       " 7   Nathalie   16776          0.40          0.51        M  CHEMINADE   \n",
+       " 8       Jean   22410          0.53          0.69        M  CHEMINADE   \n",
+       " 9       Jean   13896          0.58          0.73        M  CHEMINADE   \n",
+       " 10  François   15529          0.57          0.71        M  CHEMINADE   \n",
+       " 11  Nathalie   10437          0.29          0.38        M  CHEMINADE   \n",
+       " 12  Nathalie     495          0.21          0.32        M  CHEMINADE   \n",
+       " 13      Jean     650          0.21          0.58        M  CHEMINADE   \n",
+       " 14      Jean     870          0.28          0.80        M  CHEMINADE   \n",
+       " 15      Jean     273          0.29          1.02        M  CHEMINADE   \n",
+       " 16      Jean    1939          0.30          0.55        M  CHEMINADE   \n",
+       " 17      Jean     182          0.22          0.55        M  CHEMINADE   \n",
+       " \n",
+       "    Prénom.10 Voix.10 % Voix/Ins.10  % Voix/Exp.10  \n",
+       " 0    Jacques    6078          0.16           0.20  \n",
+       " 1    Jacques    6262          0.14           0.18  \n",
+       " 2    Jacques    7597          0.14           0.18  \n",
+       " 3    Jacques    2843          0.14           0.18  \n",
+       " 4    Jacques    3400          0.14           0.17  \n",
+       " 5    Jacques    2882          0.16           0.20  \n",
+       " 6    Jacques    9795          0.14           0.17  \n",
+       " 7    Jacques    5524          0.13           0.17  \n",
+       " 8    Jacques    5688          0.13           0.18  \n",
+       " 9    Jacques    3544          0.15           0.19  \n",
+       " 10   Jacques    3731          0.14           0.17  \n",
+       " 11   Jacques    4569          0.13           0.17  \n",
+       " 12   Jacques     253          0.11           0.16  \n",
+       " 13   Jacques     326          0.10           0.29  \n",
+       " 14   Jacques     373          0.12           0.34  \n",
+       " 15   Jacques      98          0.11           0.37  \n",
+       " 16   Jacques     944          0.15           0.27  \n",
+       " 17   Jacques     163          0.20           0.49  \n",
+       " \n",
+       " [18 rows x 82 columns]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "excel_tour1 = pd.ExcelFile('Presidentielle_2017_Resultats_Tour_1_md.xls')\n",
     "\n",
+    "\n",
+    "\n",
     "# print(len(dataframe_region[1]),len(dataframe_region))\n",
     "# print(type(dataframe_region[1]),type(dataframe_region))\n",
-    "# print(dataframe_region[1],dataframe_region)"
+    "# print(dataframe_region[1],dataframe_region)\n",
+    "\n",
+    "dataframe_region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c97cebd6",
    "metadata": {},
    "outputs": [],
