--- a/Jupyter Exercice/[Folium] Les tendances de votes par bureau de vote pour les législatives (1er tour de 2017) -1.ipynb
+++ b/Jupyter Exercice/[Folium] Les tendances de votes par bureau de vote pour les législatives (1er tour de 2017) -1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 30,
    "id": "779f9e4f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 31,
    "id": "fdedccea",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 32,
    "id": "cdf09762",
    "metadata": {},
    "outputs": [],
@@ -32,13 +32,442 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 33,
+   "id": "184ef13c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>commune_code</th>\n",
+       "      <th>libelle</th>\n",
+       "      <th>Code du b.vote</th>\n",
+       "      <th>libelle.1</th>\n",
+       "      <th>code_postal</th>\n",
+       "      <th>commune</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 227</th>\n",
+       "      <th>Unnamed: 228</th>\n",
+       "      <th>Unnamed: 229</th>\n",
+       "      <th>Unnamed: 230</th>\n",
+       "      <th>Unnamed: 231</th>\n",
+       "      <th>Unnamed: 232</th>\n",
+       "      <th>Unnamed: 233</th>\n",
+       "      <th>Unnamed: 234</th>\n",
+       "      <th>Unnamed: 235</th>\n",
+       "      <th>Unnamed: 236</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>L'Abergement-Clémenciat</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bureau 1</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>ABERGEMENT CLEMENCIAT</td>\n",
+       "      <td>4.920902</td>\n",
+       "      <td>46.150784</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>L'Abergement-de-Varey</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mairie</td>\n",
+       "      <td>1640</td>\n",
+       "      <td>L'ABERGEMENT DE VAREY</td>\n",
+       "      <td>5.423436</td>\n",
+       "      <td>46.007249</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>Ambérieu-en-Bugey</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B1 - ESPACE 1500</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>5.348146</td>\n",
+       "      <td>45.960048</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>Ambérieu-en-Bugey</td>\n",
+       "      <td>2</td>\n",
+       "      <td>B2 - ESPACE 1500</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>5.348146</td>\n",
+       "      <td>45.960048</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>Ambérieu-en-Bugey</td>\n",
+       "      <td>3</td>\n",
+       "      <td>B3 - Château des Echelles</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>AMBERIEU-EN-BUGEY</td>\n",
+       "      <td>5.364613</td>\n",
+       "      <td>45.955227</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55008</th>\n",
+       "      <td>55008</td>\n",
+       "      <td>58413</td>\n",
+       "      <td>95680</td>\n",
+       "      <td>Villiers-le-Bel</td>\n",
+       "      <td>11</td>\n",
+       "      <td>LE VILLAGE - ECOLE MARIE CURIE</td>\n",
+       "      <td>95400</td>\n",
+       "      <td>VILLIERS-LE-BEL</td>\n",
+       "      <td>2.387895</td>\n",
+       "      <td>49.006733</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55009</th>\n",
+       "      <td>55009</td>\n",
+       "      <td>58414</td>\n",
+       "      <td>95680</td>\n",
+       "      <td>Villiers-le-Bel</td>\n",
+       "      <td>12</td>\n",
+       "      <td>LES CARREAUX - GROUPE SCOLAIRE JEAN JAURES</td>\n",
+       "      <td>95400</td>\n",
+       "      <td>VILLIERS-LE-BEL</td>\n",
+       "      <td>2.415228</td>\n",
+       "      <td>49.001856</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55010</th>\n",
+       "      <td>55010</td>\n",
+       "      <td>58415</td>\n",
+       "      <td>95680</td>\n",
+       "      <td>Villiers-le-Bel</td>\n",
+       "      <td>13</td>\n",
+       "      <td>DERRIERE LES MURS - ECOLE MATERNELLE FERDINAND...</td>\n",
+       "      <td>95400</td>\n",
+       "      <td>VILLIERS-LE-BEL</td>\n",
+       "      <td>2.395384</td>\n",
+       "      <td>49.003751</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55011</th>\n",
+       "      <td>55011</td>\n",
+       "      <td>58416</td>\n",
+       "      <td>95682</td>\n",
+       "      <td>Villiers-le-Sec</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MAIRIE</td>\n",
+       "      <td>95720</td>\n",
+       "      <td>VILLIERS-LE-SEC</td>\n",
+       "      <td>2.390021</td>\n",
+       "      <td>49.072537</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55012</th>\n",
+       "      <td>55012</td>\n",
+       "      <td>58417</td>\n",
+       "      <td>95690</td>\n",
+       "      <td>Wy-dit-Joli-Village</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bureau 1</td>\n",
+       "      <td>95420</td>\n",
+       "      <td>WY-DIT-JOLI-VILLAGE</td>\n",
+       "      <td>1.835615</td>\n",
+       "      <td>49.102958</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>55013 rows × 245 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0  Unnamed: 0.1  commune_code                  libelle  \\\n",
+       "0               0             0          1001  L'Abergement-Clémenciat   \n",
+       "1               1             1          1002    L'Abergement-de-Varey   \n",
+       "2               2             2          1004        Ambérieu-en-Bugey   \n",
+       "3               3             3          1004        Ambérieu-en-Bugey   \n",
+       "4               4             4          1004        Ambérieu-en-Bugey   \n",
+       "...           ...           ...           ...                      ...   \n",
+       "55008       55008         58413         95680          Villiers-le-Bel   \n",
+       "55009       55009         58414         95680          Villiers-le-Bel   \n",
+       "55010       55010         58415         95680          Villiers-le-Bel   \n",
+       "55011       55011         58416         95682          Villiers-le-Sec   \n",
+       "55012       55012         58417         95690      Wy-dit-Joli-Village   \n",
+       "\n",
+       "      Code du b.vote                                          libelle.1  \\\n",
+       "0                  1                                           Bureau 1   \n",
+       "1                  1                                             Mairie   \n",
+       "2                  1                                   B1 - ESPACE 1500   \n",
+       "3                  2                                   B2 - ESPACE 1500   \n",
+       "4                  3                          B3 - Château des Echelles   \n",
+       "...              ...                                                ...   \n",
+       "55008             11                     LE VILLAGE - ECOLE MARIE CURIE   \n",
+       "55009             12         LES CARREAUX - GROUPE SCOLAIRE JEAN JAURES   \n",
+       "55010             13  DERRIERE LES MURS - ECOLE MATERNELLE FERDINAND...   \n",
+       "55011              1                                             MAIRIE   \n",
+       "55012              1                                           Bureau 1   \n",
+       "\n",
+       "      code_postal                commune  longitude   latitude  ...  \\\n",
+       "0            1400  ABERGEMENT CLEMENCIAT   4.920902  46.150784  ...   \n",
+       "1            1640  L'ABERGEMENT DE VAREY   5.423436  46.007249  ...   \n",
+       "2            1500      AMBERIEU-EN-BUGEY   5.348146  45.960048  ...   \n",
+       "3            1500      AMBERIEU-EN-BUGEY   5.348146  45.960048  ...   \n",
+       "4            1500      AMBERIEU-EN-BUGEY   5.364613  45.955227  ...   \n",
+       "...           ...                    ...        ...        ...  ...   \n",
+       "55008       95400        VILLIERS-LE-BEL   2.387895  49.006733  ...   \n",
+       "55009       95400        VILLIERS-LE-BEL   2.415228  49.001856  ...   \n",
+       "55010       95400        VILLIERS-LE-BEL   2.395384  49.003751  ...   \n",
+       "55011       95720        VILLIERS-LE-SEC   2.390021  49.072537  ...   \n",
+       "55012       95420    WY-DIT-JOLI-VILLAGE   1.835615  49.102958  ...   \n",
+       "\n",
+       "      Unnamed: 227  Unnamed: 228 Unnamed: 229  Unnamed: 230 Unnamed: 231  \\\n",
+       "0              NaN           NaN          NaN           NaN          NaN   \n",
+       "1              NaN           NaN          NaN           NaN          NaN   \n",
+       "2              NaN           NaN          NaN           NaN          NaN   \n",
+       "3              NaN           NaN          NaN           NaN          NaN   \n",
+       "4              NaN           NaN          NaN           NaN          NaN   \n",
+       "...            ...           ...          ...           ...          ...   \n",
+       "55008          NaN           NaN          NaN           NaN          NaN   \n",
+       "55009          NaN           NaN          NaN           NaN          NaN   \n",
+       "55010          NaN           NaN          NaN           NaN          NaN   \n",
+       "55011          NaN           NaN          NaN           NaN          NaN   \n",
+       "55012          NaN           NaN          NaN           NaN          NaN   \n",
+       "\n",
+       "       Unnamed: 232  Unnamed: 233 Unnamed: 234  Unnamed: 235 Unnamed: 236  \n",
+       "0               NaN           NaN          NaN           NaN          NaN  \n",
+       "1               NaN           NaN          NaN           NaN          NaN  \n",
+       "2               NaN           NaN          NaN           NaN          NaN  \n",
+       "3               NaN           NaN          NaN           NaN          NaN  \n",
+       "4               NaN           NaN          NaN           NaN          NaN  \n",
+       "...             ...           ...          ...           ...          ...  \n",
+       "55008           NaN           NaN          NaN           NaN          NaN  \n",
+       "55009           NaN           NaN          NaN           NaN          NaN  \n",
+       "55010           NaN           NaN          NaN           NaN          NaN  \n",
+       "55011           NaN           NaN          NaN           NaN          NaN  \n",
+       "55012           NaN           NaN          NaN           NaN          NaN  \n",
+       "\n",
+       "[55013 rows x 245 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_commune"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "1c278a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_commune[df_commune['Unnamed: 221'].notnull()].index.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "692a0341",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# % Voix/Ins ~ Voix/Ins.13 -> 14\n",
-    "# % Voix/Ins.1.1 ~ Voix/Ins.11.1 -> 11 total : 25\n",
+    "# % Voix/Ins ~ Voix/Ins.26 -> 27\n",
     "\n",
     "\n",
     "# df_commune[df_commune['% Voix/Ins.11.1'].notnull()].index.tolist()\n",
